--- a/css/main.css
+++ b/css/main.css
@@ -308,11 +308,16 @@ textarea {
 .backdrop {
   z-index: 10000;
   position: fixed;
-  width: 100%;
+  max-width: 450px;
   height: 100%;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    width: 528px;
+  }
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -326,7 +331,7 @@ textarea {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 450px;
+  max-width: 450px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -636,87 +641,6 @@ textarea {
   overflow: hidden;
 }
 
-.page-header__container {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .page-header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    border-bottom: solid 1px #ececec;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .page-header__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    border-bottom: solid 1px #ececec;
-  }
-}
-.page-header__logo {
-  color: var(--title-text-color);
-  text-align: left;
-  margin-right: 88px;
-}
-@media screen and (min-width: 1200px) {
-  .page-header__logo {
-    margin-right: 93px;
-  }
-}
-
-.nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-@media screen and (min-width: 768px) {
-  .nav__list {
-    margin-right: 84px;
-  }
-}
-
-.nav__link {
-  position: relative;
-  display: inline-block;
-  color: var(--title-text-color);
-  font-weight: 500;
-  line-height: 1.14;
-  text-decoration: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav__link--current, .nav__link:hover, .nav__link:focus {
-  color: var(--accent-color);
-}
-.nav__link--current::after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: 0;
-  background-color: var(--accent-color);
-  border-radius: 30px;
-}
-
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .mobile-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -874,6 +798,87 @@ textarea {
 .mobile-menu__socials__item:not(:last-child) .mobile-menu__socials__link {
   padding-right: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.page-header__container {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: solid 1px #ececec;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-bottom: solid 1px #ececec;
+  }
+}
+.page-header__logo {
+  color: var(--title-text-color);
+  text-align: left;
+  margin-right: 88px;
+}
+@media screen and (min-width: 1200px) {
+  .page-header__logo {
+    margin-right: 93px;
+  }
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    margin-right: 84px;
+  }
+}
+
+.nav__link {
+  position: relative;
+  display: inline-block;
+  color: var(--title-text-color);
+  font-weight: 500;
+  line-height: 1.14;
+  text-decoration: none;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link--current, .nav__link:hover, .nav__link:focus {
+  color: var(--accent-color);
+}
+.nav__link--current::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+  background-color: var(--accent-color);
+  border-radius: 30px;
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .hero {
