--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -1,11 +1,15 @@
 .backdrop {
   z-index: 10000;
   position: fixed;
-  width: 100%;
+  max-width: 450px;
   height: 100%;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.2);
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 
   &.is-hidden {
     opacity: 0;
@@ -19,7 +23,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 450px;
+  max-width: 450px;
 
   @media screen and (min-width: 1200px) {
     width: 528px;
