--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -20,7 +20,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-height: 609px;
 
   @media screen and (min-width: 480px) {
     width: 450px;
@@ -56,7 +55,9 @@
 }
 
 .application-form {
-  @include flexCentered;
+  display: flex;
+  //align-items: center;
+  //justify-content: center;
   flex-direction: column;
 
   flex-basis: 100%;
@@ -88,6 +89,9 @@
     @extend %button;
     @include flexCentered;
     letter-spacing: 0.06em;
+
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__icon {
